<resources>
    <string name="app_name">Cooking Together</string>
    <string name="congthucbanhcanh_txt">\n
        +\tGhẹ sống: 3 con\n\n
        +\tBột năng: 1,5 bát\n\n
	    +\tBột gạo: Nửa bát\n\n
	    +\tĐiều đỏ: 2 - 3 hạt\n\n
	    +\tNguyên liệu làm nước dùng: rau răm, hành lá, rau mùi, lá chanh, hành tím\n\n
	    +\tGia vị: muối, hạt tiêu, hạt nêm, mì chính, v.v\n\n
    </string>
    <string name="congthucbanhcanh5_txt">\n
        +\tĐể nấu được món bánh canh ghẹ ngon nhất, bạn cần chọn loại ghẹ vừa phải, còn tươi, đặc biệt là càng to đều. Sau đó đem rửa sạch và cắt bỏ phần chân, mai. Trứng ghẹ cũng cần được làm sạch để ra bát riêng.\n\n
        +\tCho thịt ghẹ đã sơ chế vào bát, thêm gia vị muối, tiêu, hạt nêm vừa đủ rồi trộn đều lên. Bạn nên để yên bát trong khoảng thời gian 30 phút cho ghẹ ngấm gia vị.\n\n
        +\tRau răm, hành lá, rau mùi đem nhặt bỏ các lá úa, sâu mọt. Sau đó thái nhỏ vừa ăn.\n\n
        +\tBóc vỏ hành tím, băm nhuyễn.\n\n
    </string>
    <string name="congthucbanhcanh7_txt">\n
        +\tTrộn đều bột gạo và bột năng, cho vào bát, thêm từ từ nước sôi vào, trộn cho đến khi tạo thành hỗn hợp mịn.\n\n
        +\tCán mỏng cục bột trên rồi dùng dao cắt thành từng sợi vừa ăn.\n\n
    </string>
    <string name="congthucbanhcanh9_txt">\n
        +\tHạt điều đã chuẩn bị đem đảo đều trên chảo dầu nóng cho đến khi nước chuyển màu nâu đỏ thì bỏ phần hạt.\n\n
        +\tPhi thơm hành, cho trứng ghẹ vào đảo nhẹ tay. Sau đó đổ toàn bộ thịt ghẹ vào xào cùng đến khi chín tới. Khi ghẹ đã dậy mùi thơm, bạn thêm nước lọc, nước hạt điều vừa đủ vào hỗn hợp trên, nêm nếm gia vị vừa ăn.\n\n
        +\tCho sợi bánh canh vào bát rồi múc thịt ghẹ lên trên. Chan từ từ nước dùng đến khi ngập nguyên liệu. Cuối cùng thêm hành lá, rau răm, rau mùi và thưởng thức món bánh canh ghẹ trứ danh chuẩn vị miền Nam nóng hổi.\n\n
    </string>
    <string name="congthucbanhcuon2">\n
        +\t150g bột gạo\n\n
        +\t60g bột năng\n\n
        +\t200g thịt lợn nạc xay\n\n
        +\t100g nấm hương, mộc nhĩ\n\n
        +\t1 củ hành tây\n\n
        +\t1 củ hành khô\n\n
        +\t500ml nước lọc\n\n
        +\tGia vị: Hạt tiêu, đường, dầu ăn, nước mắm, muối\n\n
        +\tDụng cụ: Chảo chống dính, bát tô, thìa, v.v\n\n
    </string>
    <string name="congthucbanhcuon5">\n
        +\tCho bột gạo, bột năng, 1/2 thìa cà phê muối, 1 thìa cà phê dầu ăn và 500ml nước lọc vào bát tô, khuấy đều cho hỗn hợp hòa tan, không bị vón cục.\n\n
        +\tDùng màng bọc thực phẩm bọc miệng bát, cho vào ngăn mát tủ lạnh ngâm khoảng 2 giờ để bảo quản.\n\n
    </string>
    <string name="congthucbanhcuon7">\n
        +\tNấm hương, mộc nhĩ đem ngâm nước khoảng 15 phút, rửa sạch, cắt bỏ gốc, thái nhỏ.\n\n
        +\tHành tây và hành khô bóc bỏ lớp vỏ ngoài, rửa sạch, cắt thành hạt lựu.\n\n
        +\tCho thịt xay, 1/2 thìa cà phê muối, 1 thìa cà phê hạt tiêu, 1 thìa cà phê hạt nêm vào bát tô, đảo đều rồi ướp khoảng 5 phút.\n\n
    </string>
    <string name="congthucbanhcuon9">\n
        +\tĐặt chảo lên bếp, thêm 1 thìa canh dầu ăn vào đun sôi. Cho hành khô vào phi thơm vàng rồi cho hành tây vào đảo đều. Tiếp theo, bạn cho phần thịt vừa ướp vào chảo đảo qua khoảng 5 phút thì đổ nấm hương, mộc nhĩ vào đảo đều cho tơi phần nhân thì tắt bếp.\n\n
    </string>
    <string name="congthucbunxaochay2">\n
    	+\tBún gạo 100 gr\n\n
	    +\tĐậu hũ chiên 5 miếng\n\n
	    +\tCải ngọt 100 gr\n\n
	    +\tCà rốt 1 củ\n\n
	    +\tRau cần tây 100 gr\n\n
	    +\tĐậu phộng 50 gr\n\n
	    +\tHành tím 4 củ\n\n
	    +\tTỏi 1 củ\n\n
	    +\tỚt hiểm 2 trái\n\n
	    +\tTương ớt 1 muỗng canh\n\n
	    +\tHạt nêm chay 1.5 muỗng cà phê\n\n
	    +\tNước tương 5 muỗng canh\n\n
	    +\tDầu ăn 245 ml\n\n
	    +\tGia vị thông dụng 1 ít (Muối/ đường/ tiêu xay)\n\n
    </string>
    <string name="congthucbunxaochay5">\n
        +\tĐậu phộng cho vào 1 cái chảo đã làm nóng và rang cho đến khi chín. Sau đó để nguội và bóc vỏ.\n\n
	    +\tTỏi, hành tím đập dập và cắt nhỏ để xào với rau cho thơm.\n\n
	    +\tRau cải ngọt và rau cần tây bạn rửa sạch rồi cắt thành những đoạn vừa ăn. Cà rốt gọt vỏ rửa sạch rồi cắt thành những miếng theo chiều dài của củ cà rốt.\n\n
    </string>
    <string name="congthucbunxaochay7">\n
        +\tBạn chuẩn bị một cái chảo cùng với 200ml dầu ăn, đợi đến khi dầu nóng thì bạn cho đậu hũ vào chiên. Trong khi chiên bạn nhớ trở đều 2 mặt của đậu để được giòn đều. Sau đó cắt đậu hũ thành từng miếng nhỏ cho vừa ăn.\n\n
	    *Mách nhỏ: Nếu bạn mua được đậu hũ vừa mới ra lò, vẫn còn ấm nóng và chưa qua thời gian bảo quản thì có thể bỏ qua bước chiên đậu hũ này!\n\n
    </string>
    <string name="congthucbunxaochay9">\n
    	1.\tPha nước sốt xào: chuẩn bị 1 cái chén và cho vào 1 muỗng cà phê hạt nêm chay, 1 muỗng canh nước tương, 1 muỗng canh tương ớt, 1/2 muỗng cà phê đường, 1/2 muỗng cà phê muối và 1/2 muỗng cà phê tiêu xay. Sau đó bạn khuấy đều hỗn hợp này lên.\n\n
	    2.\tXào rau: chuẩn bị 1 cái chảo cùng 3 muỗng canh (45ml) dầu ăn, đợi dầu sôi bạn cho hành tỏi vào phi thơm sau đó cho cà rốt vào xào trước.\n\n
	    3.\tBạn xào cà rốt khoảng 3 phút thì tiếp tục cho phần rau cải ngọt và rau cần vào. Tiếp tục cho chén nước sốt xào vào xào cùng, tiếp tục đảo đều khoảng 3 phút là được.\n\n
    </string>
    <string name="congthucbunxaochay11">\n
    	1.\tBạn chuẩn bị 1 lít nước rồi đun sôi để trụng bún. Bạn lấy bún vừa số lượng người ăn sau đó cho vào một cái tô.\n\n
	    2.\tĐổ nước sôi vào bún và trụng bún khoảng 30 giây rồi vớt ra ngâm vào tô nước đá khoảng 1 phút, vớt bún ra để ráo như vậy sẽ không làm cho bún bị nát khi xào.\n\n
    </string>
    <string name="congthucbunxaochay13">\n
    	1.\tBạn chuẩn bị 1 cái chảo lớn bắc bếp lên để lửa lớn cho chảo nóng đều. Sau đó bạn cho rau củ xào lúc nãy vào và cho bún gạo đã trụng vào luôn rồi đảo đều liên tục trên lửa lớn.\n\n
	    2.\tBạn xào khoảng 5 phút rồi cho đậu hũ vào đảo sơ qua rồi tắt bếp.\n\n
    </string>
    <string name="congthucbunxaochay15">\n
        1.\tCho vào chén 1 tép tỏi, 2 trái ớt hiểm, 1/2 muỗng cà phê hạt nêm chay, 1 muỗng cà phê đường rồi giã nát.\n\n
	    2.\tTiếp tục cho vào chén 4 muỗng canh nước tương, 3 muỗng canh nước lọc, 1/2 muỗng cà phê tiêu xay sau đó khuấy đều. Nêm nếm lại cho hợp với khẩu vị gia đình.\n\n
    </string>
    <string name="congthucbunxaochay17">\n
    	+\tMón bún gạo xào chay kết hợp với rau củ rất bắt mắt, khi ăn bạn cho thêm một ít đậu phộng rang và chang thêm nước sốt để đậm vị hơn.\n\n
	    +\tMón ăn này bạn có thể ăn vào những ngày ngán thịt cá hoặc ăn hằng ngày để đổi vị đều được.\n\n
    </string>
    <string name="ctcanhchua3">\n
    	+\t1 kg cá hú\n\n
    	+\t200g đậu bắp\n\n
    	+\t100g dọc mùng (bạc hà)\n\n
    	+\t300g giá đỗ\n\n
    	+\t50g thơm (dứa)\n\n
    	+\t1 trái cà chua\n\n
    	+\t1 gói me vắt\n\n
    	+\t1 ít hành băm\n\n
    	+\t1 ít muối hạt\n\n
    	+\t1 ít giấm\n\n
    	+\t1 ít dầu ăn\n\n
    	+\t1 ít nước mắm\n\n
    	+\t1 ít gia vị thông dụng (muối/đường/hạt nêm/bột ngọt)\n\n
    	+\t1 ít rau thơm đi kèm (ngò gai/ngò om)\n\n
    </string>
    <string name="ctcanhchua6">\n
    	1.\tCá hú mua về rửa sạch, cắt khúc vừa ăn, dày khoảng 1 đốt ngón tay.\n\n
    	2.\tSau đó chà sát cá thật kĩ với 2 muỗng canh muối hạt và 1 chút giấm cho sạch nhớt và mùi tanh. Lấy đi phần máu đông còn trong mình cá, đầu cá. Rửa lại thật sạch với nước.\n\n
    	3.\tSau khi rửa sạch cá, ướp vào khoảng 1 muỗng canh hạt nêm, 1/3 muỗng canh muối, 1/3 muỗng canh đường, 1/3 muỗng canh nước mắm, 1 xíu bột ngọt.\n\n
    	4.\tTrộn đều lên và đợi 15 phút cho gia vị ngấm đều vào cá.\n\n
    </string>
    <string name="ctcanhchua8">\n
    	+\tDọc mùng mua về sơ chế sạch và cắt thành khoanh mỏng vừa ăn.\n\n
    	+\tGiá đỗ, đậu bắp, cà chua, thơm, rau thơm rửa sạch.\n\n
    	+\tGiá đỗ để nguyên. Đậu bắp cắt chéo thành khoanh vừa ăn hoặc tùy sở thích của gia đình mà để nguyên trái.\n\n
    	+\tCà chua cắt múi cau làm 6 hoặc 8 tùy theo độ lớn. Thơm cắt thành những lát mỏng vừa ăn. Rau thơm cắt nhỏ vừa ăn.\n\n
    </string>
    <string name="ctcanhchua10">\n
    	1.\tBắc một cái chảo lên bếp và đun nóng 2 muỗng canh dầu ăn. Khi dầu nóng thì phi thơm tỏi băm cho đến khi tỏi vàng. Sau đó đổ qua 1 cái rây để lấy phần tỏi phi riêng.\n\n
    	2.\tLại tiếp tục bắc chảo lên bếp và đun nóng dầu ăn. Phi thơm hành băm.\n\n
    	3.\tSau khi hành ngả màu vàng thì cho cá vào chiên sơ cho đến khi cá săn lại là được.\n\n
    </string>
    <string name="ctcanhchua12">\n
    	1.\tBắc một cái nồi lên bếp và đun khoảng 2 lít nước.\n\n
    	2.\tKhi nước sôi, cho me vắt vào rây lưới để lược me (như ảnh), dùng vá canh để tán đều me, loại bỏ hạt.\n\n
    	3.\tSau đó cho cá đã chiên sơ vào. Khi nước đã sôi lại thì cho một nửa thơm cà vào nấu. Nếu có bọt thì vớt sạch.\n\n
    	4.\tCho vào nồi canh 2 muỗng canh hạt nêm, 2 muỗng canh đường, 1/3 muỗng canh muối và 1 xíu bột ngọt. Nêm nếm lại theo khẩu vị gia đình.\n\n
    	5.\Sau khi đun khoảng 5 - 10 phút thì canh chín, lần lượt cho phần rau còn lại (gồm phần thơm cà còn lại, dọc mùng, giá đỗ, đậu bắp) vào. Nấu sôi lại và tắt bếp và thưởng thức thôi chứ đợi gì nữa.\n\n
    </string>
    <string name="ctcomrangduabo3">\n
    	+\t1 chén cơm nguội\n\n
    	+\t150g thịt bò\n\n
    	+\t150g dưa cải chua\n\n
    	+\t2 quả trứng gà\n\n
    	+\t100g cà chua\n\n
    	+\t1 ít hành lá\n\n
    	+\t1 củ tỏi\n\n
    	+\t1,5 muỗng canh hạt nêm\n\n
    	+\t1 muỗng canh đường\n\n
    	+\t1 muỗng canh nước mắm\n\n
    	+\t1 muỗng canh dầu hào\n\n
    	+\t4 muỗng canh dầu ăn\n\n
    	+\t1 muỗng canh muối\n\n
    	+\t1 ít tiêu\n\n
    </string>
    <string name="ctcomrangduabo6">\n
        -\tChuẩn bị 1 chén cơm nguội, đập 1 quả trứng gà cho vào tô, sau đó thêm tiếp 1 muỗng canh hạt nêm, 1 ít tiêu
        Trộn đều hỗn hợp, đảm bảo cho trứng và gia vị áo đều vào cơm để khi chiên cơm được thấm vị và có màu sắc bắt mắt.\n\n
    </string>
    <string name="ctcomrangduabo8">\n
        +\tThịt bò: Để khử mùi hôi nên ngâm qua nước có pha 1 muỗng canh muối loãng khoảng 15 phút sau đó rửa sạch, để ráo. Dùng dao thái ngang thớ thịt thành các lát mỏng vừa ăn.\n\n
    	+\tCải chua: Để loại bỏ bụi bẩn, giảm bớt độ chưa và hăng của cải chua nên mang đi rửa sạch với nước, để ráo rồi cắt cải thành các miếng vừa ăn, dày khoảng 1 lóng tay.\n\n
    	+\tCà chua rửa sạch, cắt hạt lựu.\n\n
    	+\tTỏi bóc vỏ, băm nhuyễn.\n\n
    	+\tHành lá cắt nhỏ.\n\n
    </string>
    <string name="ctcomrangduabo10">\n
        -\tƯớp thịt với ½ muỗng canh đường, ½ muỗng canh hạt nêm, 1 muỗng canh dầu hào và 1 ít tiêu, sau đó trộn đều và để khoảng 15-20 phút cho thịt bò thấm gia vị.\n\n
    </string>
    <string name="ctcomrangduabo12">\n
        1.\tBắc chảo lên bếp, cho 2 muỗng cnah dầu ăn vào và đợi nóng, sau đó cho tiếp 1 muỗng canh tỏi băm vào phi thơm.\n\n
      	2.\tKhi tỏi đã dậy mùi, cho toàn bộ phần cải chua vào chảo, xào với lửa lớn khoảng 2 phút.\n\n
    	3.\tKế đến, cho phần thịt bò đã ướp gia vị vào chảo, đào đều tay đến khi thịt bò tái và săn lại thì thêm cà chưa cắt hạt lựu vào.\n\n
        4.\tThêm vào chảo 1 muỗng canh đường, 1 muỗng canh nước mắm và 1 ít tiêu, xào thêm khoảng 2 phút nữa cho thịt bò và dưa cải chua thấm gia vị, sau đó tắt bếp, cho ra dĩa.\n\n
    </string>
    <string name="ctcomrangduabo14">\n
    	1.\tThêm tiếp 2 muỗng canh dầu ăn vào chảo, cho phần tỏi băm vào phi thơm.\n\n
    	2.\tCho cơm nguội đã ướp gia vị vào, đảo đều tay trên lửa lớn cho đến khi hạt cơm bông tơi, không còn bị ướt.\n\n
    	3.\tCho toàn bộ phần thịt bò xào cải chua vào chảo, đảo đều khoảng 2 phút thì tắt bếp, rắc thêm 1 ít hành lá cắt nhỏ rồi trộn đều, cho ra dĩa.\n\n
    </string>
</resources>