<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/ImgbtnBunxaochay"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/bunxaochay"
            android:scaleType="fitXY"
            />
        <TextView
            android:id="@+id/TxtBunxaochay"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="CÔNG THỨC BÚN XÀO CHAY"
            android:textSize="25dp"
            android:textColor="#FF0000"
            android:background="#EAE7E7"
            android:textStyle="bold"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1. Nguyên liệu"
            android:textStyle="bold"
            android:textColor="#0000FF"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congthucbunxaochay2"
            android:textSize="14dp"
            android:paddingLeft="20dp"
            android:textColor="#000000"
            android:textIsSelectable="true"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2. Cách thực hiện"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#0000FF"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bước 1 : Sơ chế nguyên liệu"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:textColor="#FF00FF"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congthucbunxaochay5"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="#000000"
            android:textIsSelectable="true"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bước 2 : Chiên đậu hũ và cắt đậu hũ"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:textColor="#FF00FF"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congthucbunxaochay7"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="#000000"
            android:textIsSelectable="true"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bước 3 : Pha nước xào và xào rau"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:textColor="#FF00FF"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congthucbunxaochay9"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="#000000"
            android:textIsSelectable="true"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bước 4 : Trụng bún gạo"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:textColor="#FF00FF"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congthucbunxaochay11"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="#000000"
            android:textIsSelectable="true"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bước 5 : Xào bún"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:textColor="#FF00FF"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congthucbunxaochay13"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bước 6 : Pha nước chấm"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:textColor="#FF00FF"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congthucbunxaochay15"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="#000000"
            android:textIsSelectable="true"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hoàn Thành sản phẩm"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:textColor="#FF00FF"
            />
        <TextView
            android:id="@+id/TxtContentBunxaochay17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congthucbunxaochay17"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="#000000"
            android:textIsSelectable="true"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="3. Video hướng dẫn làm bún xào chay"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#0000FF"
            android:layout_marginBottom="10dp"
            />
        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/Youtubebunxaochay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            />
        <Button
            android:id="@+id/BtnBackFromCtbunxaochay"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Trở về"
            android:textSize="20dp"
            android:background="@drawable/ps_button"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>
</ScrollView>