<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:background="@drawable/comrangduabo"
            />
        <TextView
            android:id="@+id/Txtcontentcomrangduabo1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="CÔNG THỨC CƠM RANG DƯA BÒ"
            android:textSize="20dp"
            android:textColor="#FF0000"
            android:background="#EAE7E7"
            android:textStyle="bold"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/Txtcontentcomrangduabo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1. Nguyên liệu"
            android:textStyle="bold"
            android:textColor="#0000FF"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/Txtcontentcomrangduabo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ctcomrangduabo3"
            android:textSize="14dp"
            android:paddingLeft="20dp"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/Txtcontentcomrangduabo4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2. Cách thực hiện"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#0000FF"
            />
        <TextView
            android:id="@+id/Txtcontentcomrangduabo5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Trộn cơm với chứng"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:textColor="#FF00FF"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/Txtcontentcomrangduabo6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ctcomrangduabo6"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/Txtcontentcomrangduabo7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sơ chế thịt bò và các nguyên liệu"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:textColor="#FF00FF"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/Txtcontentcomrangduabo8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ctcomrangduabo8"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/Txtcontentcomrangduabo9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ướp thịt bò"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:textColor="#FF00FF"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/Txtcontentcomrangduabo10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ctcomrangduabo10"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/Txtcontentcomrangduabo11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Xào thịt bò với dưa chua"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:textColor="#FF00FF"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/Txtcontentcomrangduabo12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ctcomrangduabo12"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/Txtcontentcomrangduabo13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Chiên cơm"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:textColor="#FF00FF"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/Txtcontentcomrangduabo14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ctcomrangduabo14"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="#000000"
            />
        <Button
            android:id="@+id/BtnBackFromCtcomrangduabo"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Trở về"
            android:textSize="20dp"
            android:background="@drawable/ps_button"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>
</ScrollView>