<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:background="@drawable/canhchua"
            />
        <TextView
            android:id="@+id/TxtcontentCanhchua1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="CÔNG THỨC CANH CHUA"
            android:textSize="25dp"
            android:textColor="#FF0000"
            android:background="#EAE7E7"
            android:textStyle="bold"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/TxtcontentCanhchua2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1. Nguyên liệu"
            android:textStyle="bold"
            android:textColor="#0000FF"
            android:textSize="18dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/TxtcontentCanhchua3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ctcanhchua3"
            android:textSize="14dp"
            android:paddingLeft="20dp"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/TxtcontentCanhchua4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2. Cách thực hiện"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="#0000FF"
            />
        <TextView
            android:id="@+id/TxtcontentCanhchua5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sơ chế và ướp cá hú"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:textColor="#FF00FF"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/TxtcontentCanhchua6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ctcanhchua6"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/TxtcontentCanhchua7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sơ chế các nguyênliệu khác"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:textColor="#FF00FF"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/TxtcontentCanhchua8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ctcanhchua8"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/TxtcontentCanhchua9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Chiên sơ cá"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:textColor="#FF00FF"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/TxtcontentCanhchua10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ctcanhchua10"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/TxtcontentCanhchua11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nấu canh thôi"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:textColor="#FF00FF"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/TxtcontentCanhchua12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ctcanhchua12"
            android:textSize="14dp"
            android:paddingLeft="40dp"
            android:textColor="#000000"
            />
        <Button
            android:id="@+id/BtnBackFromCtcanhchua"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Trở về"
            android:textSize="20dp"
            android:background="@drawable/ps_button"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>
</ScrollView>